--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -277,6 +277,7 @@
     }
    ],
    "source": [
+    "# previewing data\n",
     "clean_df.head(3)"
    ]
   },
@@ -325,8 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function to tokeenize text in each column and remove stop words\n",
     "def process_tweet(text):\n",
+    "    \"\"\"tokeenize text in each column and remove stop words\"\"\"\n",
     "    tokens = nltk.word_tokenize(text)\n",
     "    stopwords_removed = [token.lower() for token in tokens if token.lower() not in stop_words]\n",
     "    return stopwords_removed "
@@ -368,7 +369,7 @@
   },
   {
    "source": [
-    "We can see that the corpus has a vocabulary of 20,277 unique words."
+    "We can see that the corpus has a vocabulary of 20,277 unique words. This is useful to know because that will be the amount of columns in the sparse matrix after TF-IDF Vectorization. But we'll get to that step later."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -481,7 +482,8 @@
   },
   {
    "source": [
-    "## Train-Test Split"
+    "## Train-Test Split\n",
+    "First, let's create a train-test split of the dataset, where 20% is reserved as unseen testing data."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -573,7 +575,7 @@
     "\n",
     "For this business problem, we will use F1 score as the main metric, while also looking at Precision and Recall. The F1 score finds the harmonic mean between Precision and Recall, and it's useful for data with high class imbalance.\n",
     "\n",
-    "We will also be looking at the weighted F1 score. It can account for the class imbalance in labels by calculating metrics for each label, and finding their average weighted by support (the number of true instances for each label). This results in a F1 score that is not between precision and recall.\n",
+    "We will also be looking at the weighted F1 score, as it can account for the class imbalance in labels by calculating metrics for each label. It finds their average weighted by support (the number of true instances for each label). This results in a F1 score that is not between precision and recall.\n",
     "\n",
     "Overall, we want as much hate speech to flagged as possible and so that it can be efficiently removed."
    ],
@@ -582,7 +584,9 @@
   },
   {
    "source": [
-    "## Baseline Modeling"
+    "## Baseline Modeling\n",
+    "\n",
+    "In this section we'll be running baseline Randon Forest, Logistic Regression, Naive Bayes and Support Vector Machine (SVM) models. Out of those 4 models, the best performing one will be selected to iterate through to achieve an MVP."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -593,7 +597,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function to print evaluation metrics\n",
     "def evaluation(precision, recall, f1, f1_weighted):\n",
     "    \"\"\"prints out evaluation metrics for a model\"\"\"\n",
     "    print('Testing Evaluation Metrics:')\n",
@@ -618,9 +621,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_baseline = RandomForestClassifier(n_estimators=100, class_weight='balanced', random_state=0)\n",
-    "# adding class_weight='balanced' increased accuracy & precision but decreased F1"
+    "rf_baseline = RandomForestClassifier(n_estimators=100, class_weight='balanced', random_state=0)"
    ]
+  },
+  {
+   "source": [
+    "Note that adding `class_weight='balanced'` actually increaased precision, but decreased F1. But we'll keep that hyperparameter in there, because it would need to be added eventually anyway, to deal with the huge class imabalnce in this dataset."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -700,7 +709,7 @@
    "source": [
     "## Baseline Logistic Regression\n",
     "\n",
-    "Logistic Regression is another common model used for clasification tasks."
+    "Logistic Regression is another common model used for clasification tasks. Additionally, this model tends to work better with larger datasets."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -771,6 +780,15 @@
    ]
   },
   {
+   "source": [
+    "Compared the the first Random Forest baseline, the Logistic Regression baseline performed much better. The F1 score increased from 0.232 to 0.3878.\n",
+    "\n",
+    "Although, this F1 score could still be increased. Before deciding on the model to iterate on, let's try Naive Bayes and SVM baselines first."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 217,
    "metadata": {},
@@ -782,7 +800,11 @@
   },
   {
    "source": [
-    "## Baseline Naive Bayes"
+    "## Baseline Naive Bayes\n",
+    "\n",
+    "This model is another common baseline classification algorithm that uses Bayes Theorem with an ssumption of independence between predictors. However, this assumption of independence is usually violated because the predictors are usually correlated to each other. That's where the \"Naive\" comes from.\n",
+    "\n",
+    "Naive Bayes is a popular choice for text classification because it classifies based on the probabilities of events. Another pro is that this model takes less time to train."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -852,6 +874,15 @@
    ]
   },
   {
+   "source": [
+    "The F1 score dropped down to .1923. So, this model performed worse than both the Random Forest and Logistic Regression models. This is surprising because Naive Bayes typically perform pretty well with text data. This could indicate that preprocessing steps could be improved.\n",
+    "\n",
+    "For now, let's try the last baseline and decide which model to iterate on."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 222,
    "metadata": {},
@@ -863,7 +894,13 @@
   },
   {
    "source": [
-    "## Baseline Support Vector Machine (SVM)"
+    "## Baseline Support Vector Machine (SVM)\n",
+    "\n",
+    "An SVM is a type of classifier that modifies the loss function for optimization to not only take into account overall accuracy metrics of the resulting predictions, but also to maximize the decision boundary between the data points. Essentially, this further helps tune the classifier as a good balance between underfitting and overfitting.\n",
+    "\n",
+    "A notable hyperparameter is the Kernal, which reprojects data onto a new parameter space using combinations of existing features. From there, the same process of applying SVMs to this transformed space can then be employed. This could provide more complex boundaries than just Linear.\n",
+    "\n",
+    "For now, let's try an SVM with a Linear kernal as a baseline."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -876,6 +913,13 @@
    "source": [
     "SVM_baseline = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto', class_weight='balanced')"
    ]
+  },
+  {
+   "source": [
+    "Notice that we can add `class_weight='balanced'`. This can help preemptively deal with the huge class imabalance in this dataset."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
