finish annotation for baselines & Doc2Vec

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -33,6 +33,13 @@
   },
   {
    "source": [
+    "***"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "# Overview"
    ],
    "cell_type": "markdown",
@@ -187,6 +194,13 @@
    "metadata": {}
   },
   {
+   "source": [
+    "***"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 246,
    "metadata": {},
@@ -226,6 +240,13 @@
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, plot_confusion_matrix, roc_curve, auc, classification_report"
    ]
+  },
+  {
+   "source": [
+    "***"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -564,6 +585,13 @@
   },
   {
    "source": [
+    "***"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "# Modeling Process"
    ],
    "cell_type": "markdown",
@@ -688,7 +716,7 @@
   },
   {
    "source": [
-    "These scores are not ideal becuase the F1 is being brought down on how the model predicts the \"Hate Speech\" label. The weighted F1 score mostly shows how the model is predicting the majority class, \"Not Hate Speech\". From here, we should try models with class imbalance methods to try and get the unweighted F1 to improve."
+    "These scores are not ideal becuase the F1 is being brought down on how the model predicts the \"Hate Speech\" label. The weighted F1 score mostly shows how the model is predicting the majority class, \"Not Hate Speech\". From here, we should try models with class imbalance methods to try and get the uniform F1 to improve."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -723,6 +751,13 @@
     "logreg_baseline = LogisticRegression(penalty='l2', class_weight='balanced', random_state=20)\n",
     "# class_weight='balanced' actually didn't impact the score"
    ]
+  },
+  {
+   "source": [
+    "I added `class_weight='balanced'` again, but this actually didn't impact the score. So we'll keep that hyperparamter. Also note that the penality is set to `L2`, but that's already the default."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -916,7 +951,7 @@
   },
   {
    "source": [
-    "Notice that we can add `class_weight='balanced'`. This can help preemptively deal with the huge class imabalance in this dataset."
+    "Notice that you can also add `class_weight='balanced'` to SVM models. This can help preemptively deal with the huge class imabalance in this dataset."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -979,6 +1014,13 @@
    ]
   },
   {
+   "source": [
+    "This model produced the highest F1 so far, with a score of .3955. Next, let's look at the performance of all baselines all together, and move forward with a single model to iterate on. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 227,
    "metadata": {},
@@ -1022,7 +1064,16 @@
   },
   {
    "source": [
-    "Overall, the SVM model performed the best across unweighted and weighted F1. However, there is still work to be done to bring that score up higher. Next we'll try improving that model with grid search."
+    "It's a pretty close call between the Logisitic Regression and SVM baselines. But overall, the **Linear SVM model** performed the best across both uniform and weighted F1. However, there is still work to be done to bring that score up higher. \n",
+    "\n",
+    "Next we'll try improving that model with other feature engineering techniques, class imbalance remedy methods and tuning hyperparameters with grid search."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "***"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1031,9 +1082,11 @@
    "source": [
     "# Doc2Vec\n",
     "\n",
-    "One disadvantage to using Count Vectorization or TF-DF Vectorization is that we can run into the Curse of Dimensionality. This is because these methods create Sparse Vectors, that are the length of the total vocabulary of the text corpus. Therefore, this extra space of 99% 0s could possibly hurt the model. \n",
+    "One disadvantage to using Count Vectorization or TF-DF Vectorization is that we can run into the Curse of Dimensionality, which occurs when the number of features explodes. This problem happens because these methods create Sparse Vectors, that are the length of the total vocabulary of the text corpus. \n",
     "\n",
-    "We can try Doc2Vec, which is an extension of Word2Vec. It aims to learn how to project a document into a latent d-dimensional space. Specifically, the Distributed Bag of Words (DBOW) model ignores the context words in the input, but instead forces the model to predict words randomly sampled from the paragraph in the output."
+    "This corpus has a vocabulary of 20,277. Therefore, that's the number of columns in the Sparse Matrix, creating a ton of extra space of 99% 0s could possibly hurt the model. \n",
+    "\n",
+    "We can try Doc2Vec feature engineering, which is an extension of Word2Vec. It aims to learn how to project a document into a latent d-dimensional space. Specifically, the Distributed Bag of Words (DBOW) model ignores the context words in the input, but instead forces the model to predict words randomly sampled from the paragraph in the output."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1056,12 +1109,20 @@
    "metadata": {}
   },
   {
+   "source": [
+    "After performing a fresh train test split of the original dataframe, the next step is tokenizing the text as usual. Again, we cna do this with NLTK."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tokenize_text(text):\n",
+    "    \"\"\"tokenize and remove stop words with NLTK\"\"\"\n",
     "    tokens = []\n",
     "    for sent in nltk.sent_tokenize(text):\n",
     "        for word in nltk.word_tokenize(sent):\n",
@@ -1072,16 +1133,32 @@
    ]
   },
   {
+   "source": [
+    "Next, we tag every tokenized tweet with its label, \"Hate Speech\" or \"Not Hate Speech\"."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tagging training set\n",
     "tagged_train = doc_train.apply(\n",
     "    lambda r: TaggedDocument(words=tokenize_text(r['clean_tweets']), tags=[r.label]), axis=1)\n",
+    "# tagging testing set\n",
     "tagged_test = doc_test.apply(\n",
     "    lambda r: TaggedDocument(words=tokenize_text(r['clean_tweets']), tags=[r.label]), axis=1)"
    ]
+  },
+  {
+   "source": [
+    "Let's take a look an example of a tagged tweet."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1105,7 +1182,23 @@
   },
   {
    "source": [
-    "## Training DBOW Model\n"
+    "Here, you can see that this \"Not Hate Speech\" tweet has been tokenized and tagged."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Training DBOW Model\n",
+    "\n",
+    "As mentioned before, the Distributed Bag of Words (DBOW) model ignores the context words in the input, but instead forces the model to predict words randomly sampled from the paragraph in the output. It's similar to the Skip-gram model in Word2Vec. You can read more about the model in its documentation [here](https://radimrehurek.com/gensim/models/doc2vec.html).\n",
+    "\n",
+    "The hyperparameters we'll use are as follows:\n",
+    "- `vector_size`: dimensionality of the feature vectors\n",
+    "- `alpha`: initial learning rate\n",
+    "- `min_count`: ignores all words with total frequency lower than this\n",
+    "- `dm`: defines the training algorithm; when dm=1, 'distributed memeory' (PV-DVM) is used\n",
+    "- `epochs`: number of iterations (epochs) over the corpus, defaults to 10 for Doc2Vec"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1116,7 +1209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train a doc2vec model, using only training data\n",
+    "# instantiating a doc2vec DBOW model\n",
     "dbow_model = Doc2Vec(vector_size=100, \n",
     "                alpha=0.025, \n",
     "                min_count=5,\n",
@@ -1143,6 +1236,13 @@
     "# building vocabulary \n",
     "dbow_model.build_vocab([x for x in tqdm(tagged_train.values)])\n"
    ]
+  },
+  {
+   "source": [
+    "Now that we have built a vocabulary, we can initialize the model and train it for 30 epochs."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -1216,7 +1316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def vec_for_learning(model, tagged_docs):\n",
+    "def vec_for_learning(model, tagged_docs):    \n",
     "    sents = tagged_docs.values\n",
     "    targets, regressors = zip(*[(doc.tags[0], model.infer_vector(doc.words, steps=20)) for doc in sents])\n",
     "    return targets, regressors"
@@ -1224,7 +1324,7 @@
   },
   {
    "source": [
-    "## Applying Doc2Vec Data to SVM Baseline"
+    "## Applying Doc2Vec Data to Train SVM Baseline"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1246,6 +1346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# instantiating new SVM model\n",
     "Doc2Vec_SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto', class_weight='balanced')"
    ]
   },
@@ -1325,6 +1426,13 @@
    ]
   },
   {
+   "source": [
+    "Unfortunately, using this method did not produce great results. It seems that it wasn't even able to predict the \"Not Hate Speech\" label as well as the other top-performing baselines. Let's compare it with other baselines next."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 243,
    "metadata": {},
@@ -1368,7 +1476,9 @@
   },
   {
    "source": [
-    "Looks like the Doc2Vec model didn't perform as well. Let's look at this closer with a classification report, so see how both models predicted each label."
+    "As I just mentioned, the Doc2Vec model didn't perform as well as the Baseline Logisitc Regression or Linear SVM with TF-IDF Vectorization. \n",
+    "\n",
+    "Let's look at this closer with a classification report, to see how both SVM models predicted each label using the different vectorization methods."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1405,9 +1515,16 @@
   },
   {
    "source": [
-    "The Doc2Vec method actually performed worse than the TF-IDF method. We can see that it didnt predict the 1 or 0 label as well as the TF-IDF Vectorized model.\n",
+    "As suspected, based on the F1 scores,the Doc2Vec method wasn't able to predict both the 1 or 0 label as well as the TF-IDF Vectorized model.\n",
     "\n",
-    "Let's go back to the original SVM Baseline and try other class imbalance remedy methods to improve the scores"
+    "Let's go back to the original Linear SVM and try other class imbalance remedy methods to improve the scores."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "***"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1658,7 +1775,7 @@
   },
   {
    "source": [
-    "- The baseline SVM with `class_weight=balanced` has the highest unweighted F1\n",
+    "- The baseline SVM with `class_weight=balanced` has the highest uniform F1\n",
     "- The undersampled baseline has a lower raw F1, but higher weighted F1.\n",
     "\n",
     "We can take a look at each model's classification report to get a better idea about what's happening."
@@ -2172,11 +2289,13 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "problems\n",
+    "- class imbalance\n",
+    "- indentifying what constitutes as hate speech"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
