adding images for smote & tomek links

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -1541,7 +1541,18 @@
   {
    "source": [
     "## Over-Sampling with SMOTE\n",
-    "Over-samples the minority class, hate speech."
+    "Over-samples the minority class, \"Hate Speech\".\n",
+    "\n",
+    "Rather than simply oversampling the minority class with replacement (which simply adds duplicate cases to the dataset), the algorithm generates new sample data by creating ‘synthetic’ examples that are combinations of the closest minority class cases.\n",
+    "\n",
+    "After synthetically resampling our data, we no longer need to lean on penalized class weights in order to improve our model tuning."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "![smote](./visualizations/smote.png)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1632,8 +1643,17 @@
   },
   {
    "source": [
-    "## Under-Sampling with TomeK Links\n",
-    "Under-samples the majoirty class, not hate speech."
+    "## Under-Sampling with Tomek Links\n",
+    "Under-samples the majoirty class, \"Not Hate Speech.\"\n",
+    "\n",
+    "Tomek links are pairs of very close instances, but of opposite classes. Removing the instances of the majority class of each pair increases the space between the two classes, facilitating the classification process."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "![tomek](./visualizations/tomek_links.png)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1811,6 +1831,13 @@
     "There are some differances. But most noteably, the baseline with `class_weight=balanced` predicts the hate speech (1) class much better than the other model. \n",
     "\n",
     "Therefore, let's stick with that one and grid search to tune its hyperparameters."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "***"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -2205,6 +2232,13 @@
   },
   {
    "source": [
+    "***"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "# Final Model Analysis: Linear SVM"
    ],
    "cell_type": "markdown",
@@ -2280,6 +2314,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "source": [
+    "***"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
