starting analysis on MVP

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -933,9 +933,9 @@
     "\n",
     "An SVM is a type of classifier that modifies the loss function for optimization to not only take into account overall accuracy metrics of the resulting predictions, but also to maximize the decision boundary between the data points. Essentially, this further helps tune the classifier as a good balance between underfitting and overfitting.\n",
     "\n",
-    "A notable hyperparameter is the Kernal, which reprojects data onto a new parameter space using combinations of existing features. From there, the same process of applying SVMs to this transformed space can then be employed. This could provide more complex boundaries than just Linear.\n",
+    "A notable hyperparameter is the Kernel, which reprojects data onto a new parameter space using combinations of existing features. From there, the same process of applying SVMs to this transformed space can then be employed. This could provide more complex boundaries than just Linear.\n",
     "\n",
-    "For now, let's try an SVM with a Linear kernal as a baseline."
+    "For now, let's try an SVM with a Linear kernel as a baseline."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1533,7 +1533,7 @@
    "source": [
     "# Dealing with Class Imbalance\n",
     "\n",
-    "The initial SVM Baseline dealt with class imbalance with the parameter `class_weight='balanced'`. Let's try other clas imbalance remedy methods."
+    "The initial SVM Baseline dealt with class imbalance with the parameter `class_weight='balanced'`. Let's try other clas imbalance remedy methods to improve the baseline, before tuning hyperparameters with grid search."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1541,7 +1541,7 @@
   {
    "source": [
     "## Over-Sampling with SMOTE\n",
-    "Over-samples the minority class, \"Hate Speech\".\n",
+    "This method over-samples the minority class, \"Hate Speech\".\n",
     "\n",
     "Rather than simply oversampling the minority class with replacement (which simply adds duplicate cases to the dataset), the algorithm generates new sample data by creating ‘synthetic’ examples that are combinations of the closest minority class cases.\n",
     "\n",
@@ -1563,6 +1563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# generating new sample data from original TF-IDF vectorized data\n",
     "sm = SMOTE(random_state=35)\n",
     "smote_X_train, smote_y_train = sm.fit_sample(tfidf_data_train, y_train)"
    ]
@@ -1573,6 +1574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# feeding in baseline SVM\n",
     "smote_SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto', random_state=15)"
    ]
   },
@@ -1632,6 +1634,13 @@
    ]
   },
   {
+   "source": [
+    "Seems that the uniform F1 score went down with SMOTE, from 0.395462 to 0.3022. Let's see how the model performs with Tomek Links instead."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 253,
    "metadata": {},
@@ -1644,7 +1653,7 @@
   {
    "source": [
     "## Under-Sampling with Tomek Links\n",
-    "Under-samples the majoirty class, \"Not Hate Speech.\"\n",
+    "This method under-samples the majoirty class, \"Not Hate Speech.\"\n",
     "\n",
     "Tomek links are pairs of very close instances, but of opposite classes. Removing the instances of the majority class of each pair increases the space between the two classes, facilitating the classification process."
    ],
@@ -1672,6 +1681,7 @@
     }
    ],
    "source": [
+    "# resampling original TF-IDF vectorized data\n",
     "tl = TomekLinks()\n",
     "tomek_X_train, tomek_y_train = tl.fit_resample(tfidf_data_train, y_train)\n",
     "print('Resampled dataset shape %s' % Counter(tomek_y_train))"
@@ -1749,6 +1759,13 @@
    ]
   },
   {
+   "source": [
+    "Although using Tomek Links performed better than using SMOTE, the resulting F1 still isn't as good as the baseline SVM's F1 score of 0.395462."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 259,
    "metadata": {},
@@ -1760,7 +1777,7 @@
   },
   {
    "source": [
-    "## Comparing with Other Models"
+    "### Comparing SMOTE and Tomek Link models with others that used `class_weight='balanced'`"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1795,8 +1812,8 @@
   },
   {
    "source": [
-    "- The baseline SVM with `class_weight=balanced` has the highest uniform F1\n",
-    "- The undersampled baseline has a lower raw F1, but higher weighted F1.\n",
+    "- The baseline SVM with `class_weight=balanced` has the highest uniform F1 score of 0.395462\n",
+    "- The undersampled baseline has a lower uniform F1, but higher weighted F1\n",
     "\n",
     "We can take a look at each model's classification report to get a better idea about what's happening."
    ],
@@ -1828,9 +1845,9 @@
   },
   {
    "source": [
-    "There are some differances. But most noteably, the baseline with `class_weight=balanced` predicts the hate speech (1) class much better than the other model. \n",
+    "There are some differances. But most noteably, the baseline with `class_weight=balanced` predicts the hate speech (1) class much better than the other model. It's able to predict 40% compared to the other model's 34%.\n",
     "\n",
-    "Therefore, let's stick with that one and grid search to tune its hyperparameters."
+    "However, 40% still isn't good enough! Next, we need to use grid search to improve the baseline Linear SVM's hyperparameters."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1844,7 +1861,9 @@
   },
   {
    "source": [
-    "# Grid Search"
+    "# Grid Search\n",
+    "\n",
+    "The `sklearn` library provides an easy way to tune model parameters through an exhuastive search using `GridSearchCV`. It combines K-Fold Cross Validation with a grid search of parameters."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1858,6 +1877,18 @@
     "# creating the model\n",
     "grid_model = svm.SVC(degree=3, class_weight='balanced', random_state=20)"
    ]
+  },
+  {
+   "source": [
+    "Next, let's create the parameter grid. A full list of an SVC model's hyperparameters can be found in the documentation [here](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html).\n",
+    "\n",
+    "For this grid search, I'll be looking to improve the C and Gamma, and seeing if any other kernels outperform the Linear kernel.\n",
+    "\n",
+    "- More information about selecting the right C and gamma can be found in [this](https://www.quora.com/What-are-C-and-gamma-with-regards-to-a-support-vector-machine) Quora post.\n",
+    "- More information about selecting the right SVM Kernel can be found in [this](https://towardsdatascience.com/svm-and-kernel-svm-fed02bef1200) TowardsDataScience article."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -2129,7 +2160,7 @@
   },
   {
    "source": [
-    "The grid search found that the best hyperparameters are `{'C': 1, 'gamma': 0.1, 'kernel': 'rbf'}`.\n"
+    "The grid search found that the best hyperparameters are `{'C': 1, 'gamma': 0.1, 'kernel': 'rbf'}`. The next step is to generate predictions.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -2176,6 +2207,13 @@
    "source": [
     "evaluation(grid_precision, grid_recall, grid_f1_score, grid_weighted_f1_score)"
    ]
+  },
+  {
+   "source": [
+    "This model still wasn't able to surpass the Linear SVM's F1 score of 0.395462. This is interesting because the Linear kernel's boundary usuaully isn't sufficient for separating two classes clearly. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -2225,7 +2263,7 @@
   },
   {
    "source": [
-    "Unfortunately, the model with grid searched hyperparameters didn't perform better than the baseline. Therefore, the final model will be the baseline Linear SVM model."
+    "After so many iterations, the Baseline Linear SVM model is the best performing model. Next, let's analyze this model's overall performance and how it applies to the business case."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -2239,24 +2277,12 @@
   },
   {
    "source": [
-    "# Final Model Analysis: Linear SVM"
+    "# Final Model Analysis: Linear SVM\n",
+    "\n",
+    "The best performing model is a Linear SVM model with `C=1.0`, `kernel='linear'`, `degree=3`, `gamma='auto'` and `class_weight='balanced'`."
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
