adding final model analysis & conclusion

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -2286,21 +2286,84 @@
   },
   {
    "source": [
-    "### Model Metrics"
+    "## Testing Evaluation Metrics"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 346,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Testing Evaluation Metrics:\nPrecision: 0.3609\nRecall: 0.4373\nF1 Score: 0.3955\nWeighted F1 Score: 0.9281\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluation(SVM_precision, SVM_recall, SVM_f1_score, SVM_f1_weighted)"
+   ]
   },
   {
    "source": [
-    "### Confusion Matrix"
+    "As mentioned before, the uniform F1 score of .3955 is so low because it is brought down by the poor predicting ability for the \"Hate Speech\" label. We'll take a closer look at this later, and why that might be happening despite all the preprocessing steps and model iterations."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Overfit or Underfit?\n",
+    "\n",
+    "Let's backtrack for a minute and see how the model predicts the testing data. We can use this F1 score to determine if the final model is overfit or underfit."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predict the training set\n",
+    "SVM_y_pred_train = SVM_baseline.predict(tfidf_data_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Training F1 Score:  0.3954619124797407\n"
+     ]
+    }
+   ],
+   "source": [
+    "# printing training F1\n",
+    "print(\"Training F1 Score: \", metrics.f1_score(y_test, SVM_y_pred_train))"
+   ]
+  },
+  {
+   "source": [
+    "From this training metric, we can determine that the final model is only ** *slightly* underfit**.\n",
+    "\n",
+    "Next, let's look at how the model was able to predict each label."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Confusion Matrix"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -2336,6 +2399,13 @@
    ]
   },
   {
+   "source": [
+    "From this confusion matrix, we can see that the True Negative rate is alright, but the True Positive rate is really poor. Let's normalize these values to get a better sense of this relationship."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 343,
    "metadata": {},
@@ -2367,27 +2437,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# is the model overfit or underfit??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+    "So as expected, the final model has a True Negative Rate of 95% and a True Positive Rate of only 44%.\n",
+    "\n",
+    "This is consistent with the final model's evaluation metrics, where it got a Recall of .437, aka the True Negative Rate. In this business context, we would ideally want as many True Negatives as possible, because that would be identifying Hate Speech correctly. Therefore, this is where the final model fails.\n",
+    "\n",
+    "Also, we can see that only 4.6% of predictions are False Positives. Which mean that they were classified as \"Hate Speech\" when it's not. It's great that this amount is low, because site users tend to launch complaint reports when their content is over-flagged as hate speech content when it's not.\n",
+    "\n",
+    "Overall, the Recall of this model needs to be greatly improved, in addition to the F1 of 0.3955."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -2398,16 +2458,17 @@
   },
   {
    "source": [
-    "# Conclusion"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "problems\n",
-    "- class imbalance\n",
-    "- indentifying what constitutes as hate speech"
+    "# Conclusion\n",
+    "\n",
+    "The final model had an F1 of .3955 and Recall of .437, which isn't much better than random guessing. Although this project had extensive preprocessing and modeling iterations, there is room for improvement.\n",
+    "\n",
+    "It's important to understand why the model performed so poorly and how that relates to the business problem. The F1 score was brought down by the \"Hate Speech\" label predictions. The model was able to predict 95% of the \"Not Hate Speech\" labels correctly, but it performed poorly for the other label, only able to correctly predict 44%. \n",
+    "\n",
+    "This performance is indicative of the two major roadblocks of the project: (1) the class imbalance of the dataset and (2) the model's ability to identify what constitutes as hate speech.\n",
+    "\n",
+    "The issue of class imbalance is manageable with preprocessing techniques and oversampling/undersampling techniques. However, identifying hate speech is an overall problem that many major tech companies like Twitter, Facebook and Instagram are still struggling with.\n",
+    "\n",
+    "This is because the line between Hate Speech and regular offensive language is so fine. Hate speech is defined as abusive or threatening speech that expresses prejudice against a particular group, especially on the basis of race, religion or sexual orientation. Usually, the difference between hate speech and offensive language comes down to subtle context or diction."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -2420,46 +2481,32 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "source": [
-    "# Next Steps"
+    "Here, we can see that there are 679 words unique to the \"Hate Speech\" label. Some of these words are nonsensical or meaningless, but some are especially hateful words. For example, this label contains phrases such as \"sp-cs\", \"mo-kies\", \"ov-nj-w\", \"fa--ot\" and much more. These are all ethnic or homophobic slurs. Most notably, we saw in earlier EDA that this label disproportionately contains the N-word with the hard \"R\". Language like this\n",
+    "\n",
+    "However, it's hard for a machine learning model to understand the nuances with this hateful slang. Although these words are unique to the \"Hate Speech\" label corpus, there's simply not enough data for that label. Therefore, an important next step would be to collect more data that has been identified as hate speech by CrowFlow voters.\n",
+    "\n",
+    "Additionally, we can recommend for now that Twitter manually moderate these words, just like it could with the top hashtags that were identified for each label in earlier EDA.\n",
+    "\n",
+    "Ultimately, automating hate speech detection is an extremely difficult task because of the nuances in English slang and slurs. This project was able to get that process started, but there is much more work to be done to keep this content off of public-facing forums such as Twitter."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "To further develop this project, here are some immediate next steps that anyone could execute.\n",
+    "\n",
+    "- Collect more potentialHate Speech data to be labeled by CrowdFlow voting system\n",
+    "- Improve final model with different preprocessing techniques, such as removing offensive language as stop words\n",
+    "- Evaluate model with new tweets or other online forum data to see if it can generalize well\n",
+    "- LDA Topic Modeling with Gensim\n",
+    "- Deploy MVP on Webapp via StreamLit"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
